####################################################################################################
### (c) Laurentiu Cristofor
### This file is made available under the MIT license.
### Do not use it if you have not received an associated LICENSE file.
####################################################################################################

# Set the project name.
project(LanguageTests)

# Add individual folders.
add_subdirectory(TestC++)
add_subdirectory(TestJava)
