####################################################################################################
### (c) Laurentiu Cristofor
### This file is made available under the MIT license.
### Do not use it if you have not received an associated LICENSE file.
####################################################################################################

# Set the project name.
project(TestC++)

# Our unit tests.
add_executable(TestC++ TestC++.cpp)
